--- a/web/dashboard.xhtml
+++ b/web/dashboard.xhtml
@@ -29,10 +29,10 @@
             <!-- Page Header -->
             <section class="content" id="dshb-header">
                 <header>
-                    <h1 class="display-3">Dashboard</h1>
+                    <h1 class="display-3">Biblioteca</h1>
                 </header>
 
-                <p class="lead"> Adicione categorias, items e notas.</p>
+                <p class="lead"> Adicione categorias, livros e notas.</p>
 
                 <!-- Nav menu -->
                 <nav class="nav">
